# cron-copilot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default_config.yaml
deploy/: com.croncopilot.plist  com.pycronguard.plist  croncopilot.service  pycronguard.service
scripts/: example_task.py  update_chinesecalendar.py
skills/croncopilot-ops/: SKILL.md  reference.md
skills/pycronguard-ops/: SKILL.md  reference.md
src/croncopilot/: __init__.py  __main__.py  main.py
src/croncopilot/config/: loader.py  schema.py
src/croncopilot/core/: __init__.py  executor.py  holiday.py  scheduler.py  task.py
src/croncopilot/deploy/: daemon.py  service.py
src/croncopilot/logging/: logger.py
src/croncopilot/monitor/: __init__.py  alert.py  metrics.py  tracker.py
src/croncopilot/recovery/: __init__.py  deadlock.py  health.py  retry.py
src/croncopilot/scripts/: manager.py  version.py
src/croncopilot/storage/: database.py  models.py
src/pycronguard/: __init__.py  __main__.py  main.py
src/pycronguard/config/: loader.py  schema.py
src/pycronguard/core/: __init__.py  executor.py  holiday.py  scheduler.py  task.py
src/pycronguard/deploy/: __init__.py  daemon.py  service.py
src/pycronguard/logging/: logger.py
src/pycronguard/monitor/: __init__.py  alert.py  metrics.py  tracker.py
src/pycronguard/recovery/: __init__.py  deadlock.py  (+2 more)
tests/: conftest.py  test_config.py  test_daemon.py  test_executor.py  test_holiday.py  test_main_cli.py  test_monitor.py  test_recovery.py  test_scheduler.py  test_scripts.py  test_service.py
(+26 files in other folders)
