[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycronguard"
version = "0.1.0"
description = "A powerful Python cron job management and monitoring tool"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "click>=8.0",
    "psutil>=5.9",
    "watchdog>=3.0",
    "chinesecalendar>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
pycronguard = "pycronguard.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
